After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733421 - Fix keyring initialization setup
Fix keyring initialization setup
Status: RESOLVED FIXED
Product: gnome-initial-setup
Classification: Applications
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Initial Setup maintainer(s)
GNOME Initial Setup maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-07-19 20:33 UTC by Cosimo Cecchi
Modified: 2014-07-20 03:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
keyring: open session when getting secret service (1.01 KB, patch)
2014-07-19 20:33 UTC, Cosimo Cecchi
committed Details | Review
keyring: fix variant syntax (1.05 KB, patch)
2014-07-19 20:33 UTC, Cosimo Cecchi
committed Details | Review
copy-worker: run in EarlyInitialization (1.06 KB, patch)
2014-07-19 20:33 UTC, Cosimo Cecchi
committed Details | Review
keyring: report error when failing to change keyring password (2.37 KB, patch)
2014-07-19 20:33 UTC, Cosimo Cecchi
committed Details | Review
keyring: use correct object path (1.11 KB, patch)
2014-07-19 20:33 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2014-07-19 20:33:34 UTC
There's currently a few bugs that prevent the keyring initialization gnome-initial-setup tries to do from working properly.
See atttached patches.
Comment 1 Cosimo Cecchi 2014-07-19 20:33:36 UTC
Created attachment 281204 [details] [review]
keyring: open session when getting secret service

Or we'll fail the call to secret_service_encode_dbus_secret().
Comment 2 Cosimo Cecchi 2014-07-19 20:33:40 UTC
Created attachment 281205 [details] [review]
keyring: fix variant syntax

We should pass a tuple.
Comment 3 Cosimo Cecchi 2014-07-19 20:33:43 UTC
Created attachment 281206 [details] [review]
copy-worker: run in EarlyInitialization

The EarlyInitialization phase was added to gnome-session for the purpose
of running components that need to complete before the Initialization
phase (where e.g. the keyring gets started).
Use it for the initial setup copy worker.
Comment 4 Cosimo Cecchi 2014-07-19 20:33:46 UTC
Created attachment 281207 [details] [review]
keyring: report error when failing to change keyring password

Helps with debugging.
Comment 5 Cosimo Cecchi 2014-07-19 20:33:50 UTC
Created attachment 281208 [details] [review]
keyring: use correct object path

Or we'll fail the DBus call.
Comment 6 Jasper St. Pierre (not reading bugmail) 2014-07-19 21:18:54 UTC
Review of attachment 281204 [details] [review]:

OK.
Comment 7 Jasper St. Pierre (not reading bugmail) 2014-07-19 21:19:29 UTC
Review of attachment 281205 [details] [review]:

Yep.
Comment 8 Jasper St. Pierre (not reading bugmail) 2014-07-19 21:25:16 UTC
Review of attachment 281206 [details] [review]:

OK.
Comment 9 Jasper St. Pierre (not reading bugmail) 2014-07-19 21:25:50 UTC
Review of attachment 281207 [details] [review]:

OK.
Comment 10 Jasper St. Pierre (not reading bugmail) 2014-07-19 21:26:42 UTC
Review of attachment 281208 [details] [review]:

Yikes. I don't like how we're calling an org.gnome.keyring interface on /org/freedesktop/secrets, but I guess this is how it works now.
Comment 11 Cosimo Cecchi 2014-07-20 03:20:37 UTC
Thanks for the review!

Attachment 281204 [details] pushed as 03d65b6 - keyring: open session when getting secret service
Attachment 281205 [details] pushed as ce25431 - keyring: fix variant syntax
Attachment 281206 [details] pushed as 95581e3 - copy-worker: run in EarlyInitialization
Attachment 281207 [details] pushed as 1913723 - keyring: report error when failing to change keyring password
Attachment 281208 [details] pushed as cb0aed7 - keyring: use correct object path