keyring: open session when getting secret service

Or we'll fail the call to secret_service_encode_dbus_secret().

https://bugzilla.gnome.org/show_bug.cgi?id=733421